<resources>
    <string name="app_name">Lab2</string>
    <string name="_8">8</string>
    <string name="editText1"> </string>
    <string name="_1">1</string>
    <string name="_eq">=</string>
    <string name="_2">2</string>
    <string name="_div">/</string>
    <string name="_0">0</string>
    <string name="_point">,</string>
    <string name="_4">4</string>
    <string name="_add">+</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_sub">-</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_mul">*</string>
    <string name="_9">9</string>
    <string name="_mc">MC</string>
    <string name="_m">M</string>
    <string name="editText2"> </string>
    <string name="_mod">%</string>
</resources>